Fix: issue with z-index

--- a/packages/viewer/src/styles/viewer.module.scss
+++ b/packages/viewer/src/styles/viewer.module.scss
@@ -220,7 +220,7 @@ $ease-hard-sine: cubic-bezier(0.9, 0, 0.2, 1);
 
 .shareIncentiveContainer {
     position: absolute;
-    z-index: 10;
+    z-index: 1;
     top: 0;
     left: 10px;
     width: 100%;
